Refactor AskController
